fix riddle icon not align well

--- a/@antv/gatsby-theme-antv/site/components/Toolbar.module.less
+++ b/@antv/gatsby-theme-antv/site/components/Toolbar.module.less
@@ -40,6 +40,7 @@
     transition: all 0.3s;
     position: relative;
     top: -1px;
+    line-height: 1;
   }
 
   .stackblitz {
